syntax = "proto3";
option go_package = "model/";
//package GrpcMicroservice;

service SocialGrpc {
  rpc Chkauth(JwtdataInput) returns (Authd) {}
  rpc GetPosts(GetPost) returns (MongoFields) {}
  rpc SignIn(SecurityCheckInput) returns (Jwtdata) {}
  rpc SignUp(SecurityCheckInput) returns (Jwtdata) {}
  rpc LikeComment(SendLikeInput) returns (MongoFields) {}
  rpc ReplyComment(ReplyCommentInput) returns (MongoFields) {}
  rpc NewComment(SendCmtInput)returns (MongoFields) {}
  //rpc PostFile(Upload) returns (MongoFields) {} 
  rpc RequestOTP(RequestOtpInput) returns (Confirmation) {}
  rpc SecureUpdate(SecurityCheckInput) returns (Jwtdata) {}
  rpc Follow(FollowInput) returns (MongoFields) {}

}

message SecurityCheckInput  {
	string Username = 1 ; 
	string Password = 2 ;
	string DOB = 3 ;
	string Email = 4 ;
	string Mobile = 5 ;
	string OTP_Email = 6 ;
	string OTP_Mobile = 7 ;
	string Token = 8 ;
	string RequestType = 9 ;
	string UpdateType = 10 ;
	string UpdateData = 11 ;
}

message RequestOtpInput  {
	string Username = 1 ; 
	string Mobile = 2 ;
	string Email = 3 ;
	string RequestType = 4 ;
	string UserType = 5;
}

message Confirmation {
	string Username = 1;
	string RequestType = 2;
}


message GetPost {
	string Username = 1 ;
	string RequestType = 2 ;
	string SearchTerm = 3 ;
}


message Authd  {
	string AuthdUser = 1 ;
}

message Claims  {
	string Username = 1 ; 
}

message GetUserCmts  {
	string Page = 1 ;
	string Username = 2 ; 
}

message Jwtdata  {
	string Token = 1 ;
	string MobClue = 2 ;
	string EmailClue = 3 ;
	string AuthType = 4 ;
}

message JwtdataInput  {
	string Token = 1 ; 
}

message Likes  {
	string Username = 1 ;
	string Profpic = 2 ; 
}

message ReplyData{
	string Username = 1 ;
	string PostID = 2 ;
	string ReplyID = 3 ;
}

message LikedData{
	string Username = 1 ;
	string PostID = 2 ;
}

message MongoFields  { 	 
	string Username = 1 ;  
	string Bio = 2 ; 
	string Profpic = 3 ; 
	repeated string Photos = 4 ;
	repeated string Following = 5 ;  
	repeated string Followers = 6 ;
	repeated ReplyData Replys = 7 ;
	repeated LikedData Liked = 8 ; 
	repeated PostData Posts = 9 ; 
	// int32 LastCommentNum = 10 ;
}

message MsgCmts  {
	string ID = 1 ;
	string Username = 2 ;
	string Comment = 3 ; 
	string Profpic = 4 ;
}

message MutationInput  {
	string Name = 1 ; 
	string ID = 2;
}

message PostData  {
	string ID = 1 ;
	string Username = 2 ; 
	string MainCmt = 3 ; 
	int64 TimeStamp = 4 ; 
	repeated MsgCmts Comments = 5 ; //    []MsgCmts `bson:"Comments" json:"Comments"`
	repeated Likes Likes = 6 ; //   []Likes   `bson:"Likes" json:"Likes"`
}

message FollowInput  {
	string Username = 1 ; 
	string UserOfIntrest = 2 ; 
	string ReturnPage = 3 ; 
	string RequestType = 4 ;
}


message ReplyCommentInput  {
	string AuthorUsername = 1 ; 
	string ReplyUsername = 2 ; 
	string ReplyComment = 3 ; 
	string ReplyProfpic = 4 ; 
	string PostID = 5 ;  
	string ReturnPage = 6 ;
	string RequestType = 7 ;
	string ReplyID = 8 ;
}

message SendCmtInput  {
	string Username = 1 ; 
	string SessionUser = 2 ;
	string MainCmt = 3 ; 
	int64 TimeStamp = 4 ;   
	string ReturnPage = 5 ;  
	string RequestType = 6 ;
	string PostID = 7 ;
}

message SendLikeInput  {
	string Username = 1 ; 
	string LikedBy = 2 ; 
	string LikeByPic = 3 ;  
	string PostID = 4 ;   
	string ReturnPage = 5 ; 
	string RequestType = 6 ;
}


